@@ -3,6 +3,10 @@ ChangeLog
 
 Release: 2.0.0
 ===============================================================================
+2025-08-29 Created installable package for MacOS.
+
+2025-08-28 Added battery support for Linux and MacOS.
+
 2025-08-23 Fixed sound playing for Android.
 
 2025-08-20 Added commands ^ENC, ?ENC and ?MAC.
